# leg-language

./: .gitignore  CMakeLists.txt  README.md  compile.sh  generate-compiler-parser.sh  generate-parsers.sh  generate-preprocessor-parser.sh  install.sh  run-example.sh
examples/: fibonacci.leg  hello-world.leg
examples/arithmetic/: arithmetic-expressions.leg  compound.leg
examples/arrays/: array.leg  multi-dimensional.leg
examples/conditionals/: boolean.leg  if.leg
examples/functions/: arguments.leg  return.leg
examples/io/: file.leg  print.leg
examples/loops/: for.leg  while.leg
examples/multithreading/: catch.leg  kick.leg
examples/variables/: assignment.leg
src/cli/: main.cpp
src/compiler/: main.cpp  parser.y  tokens.l
src/compiler/ast/: ExpressionNode.h  Node.h  StatementNode.h
src/compiler/ast/expressions/: ArithmeticNode.h  BlockNode.h  BooleanNode.h  CreateArrayNode.h  FloatNode.h  FunctionCallNode.h  GetterIndexerNode.h  GetterPropertyNode.h  InitializeArrayNode.h  IntegerNode.h  KickNode.h  StringNode.h  VariableNode.h
src/compiler/ast/misc/: ArrayTypeNode.h  FunctionArgumentNode.h  IdentifierNode.h  PrimitiveTypeNode.h  TypeNode.h
src/compiler/ast/statements/: AssignmentNode.h  CatchNode.h  CompoundAssignmentNode.h  DeclarationNode.h  ExpressionStatementNode.h  ForNode.h  FunctionDeclarationNode.h  FunctionReturnStatementNode.h  IfNode.h  SetterIndexerNode.h  WhileNode.h
src/compiler/codegen/: CodeGenerator.cpp  CodeGenerator.h  keywords.h  operators.h  utils.h
src/compiler/codegen/context/: BlockContext.cpp  BlockContext.h  Variable.h  (+1 more)
src/compiler/shared/: KickResult.h  Range.h
src/preprocessor/: main.cpp  preprocessor.l
(+40 files in other folders)
